--- a/FLASH USDT.html
+++ b/FLASH USDT.html
@@ -48,7 +48,7 @@
 
         <div class="bg-white shadow-md rounded-lg p-6 max-w-lg mx-auto mt-8">
             <h2 class="text-2xl font-bold mb-4">Buy License Key</h2>
-            <p class="text-gray-700 mb-4">To use the FLASH USDT Generator, send payment to the TRC20 address below:</p>
+            <p class="text-gray-700 mb-4">To use the FLASH USDT Generator, send payment to the ERC20 address below:</p>
             <p class="text-gray-700 font-bold mb-4 break-words">0x0ed88268bfAEE2F0857f35eA0f9DD2d48962C7cB</p>
             <p class="text-gray-600 text-sm">Minimum payment: 50 USDT</p>
             <button id="confirmPayment" 
